# rp2040

./: README.md
rp2040_hal/: Cargo.toml
rp2040_hal/.cargo/: config.toml
rp2040_hal/src/: main.rs
rp2040_min/: Cargo.toml  README.md
rp2040_min/.cargo/: config.toml
rp2040_min/src/: main.rs
rp2040_pac/: Cargo.toml
rp2040_pac/.cargo/: config.toml
rp2040_pac/src/: main.rs
